# mark_logic

./: .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.envs/: .env.mark.example
.github/workflows/: main.yml
mark/: Dockerfile  Dockerfile_tests  pyproject.toml
mark/scripts/: README.md  backup.bat  load_backup.bat  start_mark_logic.bat  upd_mark_logic.bat
mark/src/: alembic.ini  main.py
mark/src/admin/: admin_models.py  authenticate.py
mark/src/api/v1/: health.py  products.py  products_hs.py
mark/src/api/v1/api_models/: products.py  products_hs.py
mark/src/core/: logger.py  settings.py
mark/src/db/: postgres.py
mark/src/migration/: env.py
mark/src/migration/versions/: 2025_03_17_1209-4db8388dcc33_initial.py  2025_04_02_1813-b2cf6e1c1f29_add_product_hs.py
mark/src/models/: entity.py
mark/src/services/: help.py  products.py  products_hs.py
mark/src/tests/: conftest.py  test_products.py
