[tool.poetry]
name = "mark_logic"
version = "0.1.0"
description = "marking of goods"
authors = ["VlNagibin"]
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
force_grid_wrap = 0
use_parentheses = true
force_sort_within_sections = true
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = 3.11
follow_imports = "skip"
